--- a/pod-definition.yml
+++ b/pod-definition.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Pod
 metadata:
@@ -7,14 +8,27 @@ metadata:
     type: prod
 spec:
   affinity:
-  nodeAffinity:
-    requiredDuringSchedulingIgnoredDuringExecution:
-      nodeSelectorTerms:
-        - matchExpressions:
-            - key: type
-              operator: In
-              values:
-                - prod
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
+              - key: type
+                operator: In
+                values:
+                  - prod
+  containers:
+    - name: nginx-container
+      image: nginx
+
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: myapp-prod
+  labels:
+    app: myapp
+    type: prod
+spec:
   containers:
     - name: nginx-container
       image: nginx
